Fix: Icons - Overflow pinned icon as tab pinned icon

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -12191,7 +12191,7 @@
         --menuitem-image: url("../icons/send.svg");
       }
       .customize-context-moveToPanel {
-        --menuitem-image: url("chrome://browser/skin/pin-12.svg");
+        --menuitem-image: url("../icons/pin-tab.svg");
       }
       #toolbar-context-autohide-downloads-button {
         /* checkbox */
@@ -27005,7 +27005,7 @@
 }
 @media (not (-moz-bool-pref: "userChrome.icon.disabled")) and (-moz-bool-pref: "userChrome.icon.menu") and (-moz-bool-pref: "userChrome.icon.context_menu") {
   .customize-context-moveToPanel {
-    --menuitem-image: url("chrome://browser/skin/pin-12.svg");
+    --menuitem-image: url("../icons/pin-tab.svg");
   }
 }
 @media (not (-moz-bool-pref: "userChrome.icon.disabled")) and (-moz-bool-pref: "userChrome.icon.menu") and (-moz-bool-pref: "userChrome.icon.context_menu") {
