--- a/css/leptonChromeESR.css
+++ b/css/leptonChromeESR.css
@@ -12819,7 +12819,7 @@
         --menuitem-image: url("../icons/send.svg");
       }
       .customize-context-moveToPanel {
-        --menuitem-image: url("chrome://browser/skin/pin-12.svg");
+        --menuitem-image: url("../icons/pin-tab.svg");
       }
       #toolbar-context-autohide-downloads-button {
         /* checkbox */
